[tool.poetry]
name = "lsu-course"
version = "0.1.0"
description = ""
authors = ["Rishad Bharucha <rb2102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.1.1"
openai = "^1.25.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
